# git-tools

./: .coverage  .gitignore  .gremlins-score  AGENTS.md  CHANGELOG.md  COMPLETIONS.md  README.md  SIZES.md  generate_completions.py  pack_stats_help.txt  pyproject.toml  stats_commit_help.txt  stats_commit_output.txt  stats_commit_v_err.txt  stats_pack_full_output.txt  stats_pack_output.txt
.devcontainer/: devcontainer.json  setup.sh
.github/workflows/: test.yml
completions/: git-tools.bash  git-tools.zsh
doc/: COMPLETIONS.md  REPO_MANAGER.md  SIZES.md
doc/investigation/: commit_stats_err.txt  commit_stats_help.txt  investigation_report.md  pack_stats_err.txt  stats_commit_err.txt  stats_pack_err.txt  stats_pack_help.txt
reports/main/: gremlins.json  history.json  index.html
reports/pr-23/: gremlins.json  history.json
reports/pr-24/: gremlins.json  history.json
reports/pr-25/: gremlins.json  history.json
reports/pr-26/: gremlins.json  history.json
reports/pr-27/: gremlins.json  history.json
reports/pr-28/: gremlins.json  history.json
reports/pr-29/: gremlins.json  history.json
scripts/: generate_completions.py
src/git_tools/: __init__.py  commit_stats.py  gremlins_to_sarif.py  gremlins_to_stryker.py  pack_stats.py  repo_manager.py  stats.py  utils.py
tests/: test_bash_completion.py  test_commit_stats.py  test_completions.py  test_gremlins_to_sarif.py  test_gremlins_to_stryker.py  test_pack_stats.py  test_repo_manager.py  test_repo_manager_bdd.py  test_stats.py
tests/features/: repo_manager.feature
