[project]
name = "jfasoc"
version = "0.1.0"
description = "Git helper tools"
authors = [
    {name = "jfasoc", email = "7720125+jfasoc@users.noreply.github.com"},
]
dependencies = []
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}

[project.scripts]
git-commit-stats = "git_tools.commit_stats:main"
git-pack-stats = "git_tools.pack_stats:main"

[tool.pdm]
distribution = true

[tool.pdm.dev-dependencies]
dev = [
    "pytest",
    "pytest-mock",
    "pytest-cov",
    "ruff",
]

[tool.pytest.ini_options]
addopts = "--cov=git_tools --cov-report=term-missing --cov-fail-under=100"
testpaths = ["tests"]

[tool.ruff]
line-length = 88
target-version = "py310"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
