[project]
name = "git-tools"
dynamic = ["version"]
description = "Git helper tools"
authors = [
    {name = "jfasoc", email = "7720125+jfasoc@users.noreply.github.com"},
]
dependencies = []
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

[project.scripts]
git-repo-manager = "git_tools.repo_manager:main"
git-stats = "git_tools.stats:main"
gremlins-to-sarif = "git_tools.gremlins_to_sarif:main"
gremlins-to-stryker = "git_tools.gremlins_to_stryker:main"

[tool.pdm]
distribution = true

[tool.pdm.version]
source = "scm"

[tool.pdm.dev-dependencies]
dev = [
    "pytest",
    "pytest-mock",
    "pytest-cov",
    "pytest-bdd",
    "pytest-gremlins",
    "pytest-xdist",
    "ruff",
    "argcomplete",
    "shtab",
    "commitizen",
    "pre-commit",
]

[tool.pytest.ini_options]
addopts = "--cov=git_tools --cov-report=term-missing --cov-fail-under=100"
testpaths = ["tests"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.pytest-gremlins]
gremlins = false
gremlin-workers = "auto"
gremlin-report = ["term-missing"]

[tool.commitizen]
name = "cz_conventional_commits"
version_provider = "scm"
tag_format = "v$version"
update_changelog_on_bump = true
annotated_tag = true
bump_message = "chore(release): $new_version [skip ci]"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
